* mk5putdir: if binary dump file cannot be created, don't seg fault; instead tell user.
* mk5daemon: add message handling for starting and stopping fuseMk5
* mk5lock: added support for fuseMk5 locks
* mk5control: added new commands to start and stop fuseMk5
* startfusemk5: new utility to start fuseMk5
* stopfuseMk5: new utility to stop fuseMk5
* Version for DiFX-2.5, May 16, 2017

Version 2.4.0
~~~~~~~~~~~~~
* mk5putdir: replace based on binary file / have ability to change version number
* mk5daemon: add ability to kill a specific job. Invoke with:  mk5control "killmpifxcorr jobId" all
* New utility  killjob  which executes: mk5control "killmpifxcorr jobId" all
* When looking at incoming command messages (monitor.cpp), check against all local addresses, not just the "hostname"
* mk5erase: ask before continuing on write-protected module (even if force is specified)
* mk5dir: save a copy of the binary directory as well as the decoded directory
* Revamped support for Mark5 directory structures: vsn, mk5dir
* mk5erase: if MARK5_CONDITION_PATH env var is set, write conditioning results to file within that path.
* Version for DiFX-2.4, Nov 4, 2014

Version 2.3.0
~~~~~~~~~~~~~
* mk5dir: support SDK9 legacy directories (as per DIMINO 2.2.1 w/ SDK 9.2)
* mk5cp: add mode to "fix" Mark5B format scans
* mk5putdir: new utility: replace the on-disk directory
* mark5 utilities: normalize use of RT mode a bit
* mk5dir: default: operate without RT mode
* mk5dir: detect unusual data while decoding directories, namely data where the payload contains a repeating pattern.
* mk5test: new utility: use XLRSelfTest to test a Streamstor card
* mk5dir: better VDIF support
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
* Speed up directory reading
* Better .rpm infrastructure
* IPv6 support added to VSI interface; the whole package at this point is likely IPv6 compliant.
* Count network traffic from all interfaces, not just eth* and ib*.  lo is ignored.